force-app/main/default/objects/Product_Pricebook_Map__c/Product_Pricebook_Map__c.object-meta.xml
<CustomObject>
    <label>Product-Pricebook Map</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product-Pricebook Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>