force-app/main/default/objects/Product_Pricebook_Map__c/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <description>The Salesforce ID of the pricebook.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Salesforce ID of the pricebook.</inlineHelpText>
    <label>Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>