force-app/main/default/objects/Product_Pricebook_Map__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>The name of the pricebook</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the pricebook</inlineHelpText>
    <label>Pricebook Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>