force-app/main/default/objects/Product_Pricebook_Map__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Pricebook_Name__c</columns>
    <columns>Pricebook_Id__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sales_Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>